--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jfvilas/plugin-kwirth-backend",
-  "version": "0.13.2",
+  "version": "0.13.4",
   "description": "Backstage backend plugin for Kwirth plugins",
   "keywords": [
     "Backstage",
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jfvilas/plugin-kwirth-backend"
+    "url": "git+https://github.com/jfvilas/plugin-kwirth-backend.git"
   },
   "main": "src/index.ts",
   "types": "src/index.ts",
